# protobuf-rs

./: .gitignore  .npmignore  CHANGELOG.md  Cargo.toml  NOTICE  OAT.xml  OPTIMIZATION_RESULTS.md  PHASE2_COMPLETION.md  PROJECT_STATUS.md  README.OpenSource  README.md  README.zh.md  README_OLD.md  ROADMAP.md  RUST_ACCELERATION.md  VERIFICATION_RESULTS.md  build-profile.json5  example-usage.js  hvigorw  hvigorw.bat  index.d.ts  index.js  light.js  minimal.js  oh-package.json5  package-lock.json  package.json  protobufjs-compat.js  test-integration.js  test.js
.github/: dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  release.yml
AppScope/: app.json5
bench/: compare_old_new.js  final_benchmark.js  rust-comparison.js
bench-js/: benchmark.js  detailed-benchmark.js  generate-report.js  package.json
benches/: benchmark.rs  message_benchmark.rs  varint_benchmark.rs
benchmarks/: comprehensive.js  cpu-profile.js  memory-profile.js  real-world.js
cli/: package-lock.json
docs/: BENCHMARK_RESULTS.md  COMPATIBILITY_REPORT.md  INTEGRATION_GUIDE.md  PERFORMANCE_REPORT.md  PHASE4_SUMMARY.md  QUICK_START.md  RESTRUCTURING_SUMMARY.md  RUST_BUILD.md
docs/diagrams/: comparison-arch.mmd  core-components.mmd  data-flow.mmd  protobuf-rs-arch.mmd
docs/zh_CN/: API.md  FAQ.md  README.md  architecture.md  comparison.md
entry/src/: main.ets
entry/src/ohosTest/: README.md
entry/src/ohosTest/ets/test/: Ability.test.ets  user.d.ts  user.js
entry/src/ohosTest/ets/testability/: TestAbility.ets
entry/src/ohosTest/ets/testability/pages/: Index.ets
entry/src/ohosTest/ets/testrunner/: OpenHarmonyTestRunner.ts
examples/: README.md  base64-encoding.js  basic-encode-decode.js  drop-in-replacement.js  long-type-handling.js  protobufjs-migration.js  streaming-processing.js
future/: parallel.rs
integration/: performance-monitor.js  protobufjs-adapter.js
js/: index.d.ts  index.js  package.json
rust/: Cargo.toml
rust/src/: lib.rs  reader.rs  writer.rs
scripts/: build-rust.js  gulpfile.js  run-protobufjs-tests.sh
src/: error.rs  lib.rs  parallel.rs  pool.rs  reader.rs  simd.rs  varint.rs  wasm.rs  wire.rs  writer.rs  zigzag.rs
src/rust/: Cargo.toml  decoder.rs  encoder.rs  lib.rs  reader.rs  writer.rs
src/rust-wrapper/: reader.js  writer.js
test/: protobufjs-compat-test.js  protobufjs-compatibility.js
tests/: __rust_compat.js  integration_tests.rs
