[package]
name = "protobuf-rs"
version = "1.0.0"
edition = "2021"
authors = ["LuuuXXX"]
description = "High-performance Protocol Buffers implementation with Rust core"

[lib]
name = "protobuf_rs"
path = "src/rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
napi = "2.16"
napi-derive = "2.16"
byteorder = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true
