[package]
name = "protobuf-rs-ohos"
version = "1.0.0"
edition = "2021"
authors = ["LuuuXXX"]
description = "High-performance Protocol Buffers for OpenHarmony"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2.16"
napi-derive = "2.16"
byteorder = "1.5"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
